Fix category icon when project name is too short

--- a/app/assets/stylesheets/pages/projects/project-box.sass
+++ b/app/assets/stylesheets/pages/projects/project-box.sass
@@ -192,6 +192,7 @@ body.embed
   .project-box
     &:not(.large) a
       display: inline-block
+      width: 100%
     &:hover:not(.large)
       .description *
         +single-transition(all, 1s)
